tests/snapshots/test_runner__tests__compiler__typecheck__record_type_2__record_type_2.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
entry
  let x = {
    x = 2,
    y = "hello"
  };
  let z: String = x .x;
  ()

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/record_type_2/record_type_2.kk:6:19
  │
6 │   let z: String = x .x;
  │                   ^^^^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - String      | + Int       |
    +---------------+-------------+
